# YOLOv5_ROS2-YOu-can-Leverage-On-ROS2

./: LICENSE  README.md
boundingboxes/: CMakeLists.txt  package.xml
boundingboxes/msg/: BoundingBox.msg  BoundingBoxes.msg
boundingboxes/msg/myboundingboxes/: bb.txt
yolov5_ros2/: package.xml  setup.py  yolov5_strict_requirements.txt
yolov5_ros2/launch/: yolov5_ros2_node.launch.py
yolov5_ros2/utils/: google_utils.py  image_publisher.py  segmentation.py
yolov5_ros2/yolov5_ros2/: obj_detect.py
